--- a/faster_whisper_youtube.ipynb
+++ b/faster_whisper_youtube.ipynb
@@ -16,7 +16,7 @@
         "\n",
         "Whisper is a general-purpose speech recognition model. It is trained on a large dataset of diverse audio and is also a multi-task model that can perform multilingual speech recognition as well as speech translation and language identification.\n",
         "\n",
-        "This Notebook will guide you through the transcription of a Youtube video using Whisper. You'll be able to explore most inference parameters or use the Notebook as-is to store the transcript and video audio in your Google Drive."
+        "This Notebook will guide you through the transcription of a Youtube video using Faster Whisper. You'll be able to explore most inference parameters or use the Notebook as-is to store the transcript and video audio in your Google Drive."
       ],
       "metadata": {
         "id": "96kvih9mXkNN"
@@ -237,7 +237,7 @@
         "\n",
         "#@markdown ### **Behavior control**\n",
         "#@markdown #### Word-level timestamps\n",
-        "word_level_timestamps = False #@param {type:\"boolean\"}\n",
+        "word_level_timestamps = True #@param {type:\"boolean\"}\n",
         "#@markdown ---\n",
         "#@markdown #### VAD filter\n",
         "vad_filter = False #@param {type:\"boolean\"}\n",
@@ -263,6 +263,7 @@
         "        f.write(f\"{sentence_idx}\\n\")\n",
         "        f.write(f\"{ts_start} --> {ts_end}\\n\")\n",
         "        f.write(f\"{word.word}\\n\\n\")\n",
+        "        sentence_idx = sentence_idx + 1\n",
         "    else:\n",
         "      ts_start = seconds_to_time_format(segment.start)\n",
         "      ts_end = seconds_to_time_format(segment.end)\n",
@@ -270,6 +271,7 @@
         "      f.write(f\"{sentence_idx}\\n\")\n",
         "      f.write(f\"{ts_start} --> {ts_end}\\n\")\n",
         "      f.write(f\"{segment.text}\\n\\n\")\n",
+        "      sentence_idx = sentence_idx + 1\n",
         "\n",
         "shutil.copy(video_path_local.parent / transcript_file_name,\n",
         "            drive_whisper_path / transcript_file_name\n",
@@ -277,8 +279,7 @@
         "display(Markdown(f\"**Transcript file created: {drive_whisper_path / transcript_file_name}**\"))\n"
       ],
       "metadata": {
-        "id": "Ad6n1m4deAHp",
-        "cellView": "form"
+        "id": "Ad6n1m4deAHp"
       },
       "execution_count": null,
       "outputs": []
