Hide code in colab

--- a/faster_whisper_youtube.ipynb
+++ b/faster_whisper_youtube.ipynb
@@ -279,7 +279,8 @@
         "display(Markdown(f\"**Transcript file created: {drive_whisper_path / transcript_file_name}**\"))\n"
       ],
       "metadata": {
-        "id": "Ad6n1m4deAHp"
+        "id": "Ad6n1m4deAHp",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
