add initial_prompt and language in UI

--- a/faster_whisper_youtube.ipynb
+++ b/faster_whisper_youtube.ipynb
@@ -148,7 +148,7 @@
         "Type = \"Youtube video or playlist\" #@param ['Youtube video or playlist', 'Google Drive']\n",
         "#@markdown ---\n",
         "#@markdown #### **Youtube video or playlist**\n",
-        "URL = \"https://youtu.be/hJP5GqnTrNo\" #@param {type:\"string\"}\n",
+        "URL = \"https://www.bilibili.com/video/BV1ik4y1x7Qf/?vd_source=c136ccc9c1aa8d8b8723abf57c945bf5\" #@param {type:\"string\"}\n",
         "# store_audio = True #@param {type:\"boolean\"}\n",
         "#@markdown ---\n",
         "#@markdown #### **Google Drive video, audio (mp4, wav), or folder containing video and/or audio files**\n",
@@ -236,15 +236,22 @@
         "#@markdown ## **Parameters** ⚙️\n",
         "\n",
         "#@markdown ### **Behavior control**\n",
+        "#@markdown #### Language\n",
+        "language = \"en\" #@param [\"auto\", \"en\", \"zh\", \"jp\", \"fr\", \"de\"] {allow-input: true}\n",
+        "#@markdown #### initial prompt\n",
+        "initial_prompt = \"\\u8FD9\\u662F\\u4E2D\\u6587\\u548C\\u82F1\\u6587\\u6DF7\\u5408\\u7684\\u8BED\\u97F3\\uFF0C\\u9047\\u5230\\u4E2D\\u6587\\u5219\\u8BC6\\u522B\\u4E3A\\u4E2D\\u6587\\uFF0C\\u9047\\u5230\\u82F1\\u6587\\u5219\\u8BC6\\u522B\\u4E3A\\u82F1\\u6587\" #@param {type:\"string\"}\n",
         "#@markdown #### Word-level timestamps\n",
-        "word_level_timestamps = True #@param {type:\"boolean\"}\n",
+        "word_level_timestamps = False #@param {type:\"boolean\"}\n",
         "#@markdown ---\n",
         "#@markdown #### VAD filter\n",
         "vad_filter = False #@param {type:\"boolean\"}\n",
         "vad_filter_min_silence_duration_ms = 2000 #@param {type:\"integer\"}\n",
         "#@markdown ---\n",
         "\n",
-        "segments, info = model.transcribe(str(video_path_local), beam_size=5, \n",
+        "\n",
+        "segments, info = model.transcribe(str(video_path_local), beam_size=5,\n",
+        "                                  language=None if language == \"auto\" else language,\n",
+        "                                  initial_prompt=initial_prompt,\n",
         "                                  word_timestamps=word_level_timestamps, \n",
         "                                  vad_filter=vad_filter,\n",
         "                                  vad_parameters=dict(min_silence_duration_ms=vad_filter_min_silence_duration_ms))\n",
@@ -279,8 +286,7 @@
         "display(Markdown(f\"**Transcript file created: {drive_whisper_path / transcript_file_name}**\"))\n"
       ],
       "metadata": {
-        "id": "Ad6n1m4deAHp",
-        "cellView": "form"
+        "id": "Ad6n1m4deAHp"
       },
       "execution_count": null,
       "outputs": []
