--- a/faster_whisper_youtube.ipynb
+++ b/faster_whisper_youtube.ipynb
@@ -123,7 +123,7 @@
         "#@markdown | large-v2  |   1550 M   |        N/A         |      `large-v2`       |    ~4 GB     |       1x       |\n",
         "\n",
         "#@markdown ---\n",
-        "model_size = 'medium' #@param ['medium', 'large-v2']\n",
+        "model_size = 'large-v2' #@param ['medium', 'large-v2']\n",
         "device_type = \"cuda\" #@param {type:\"string\"} ['cuda', 'cpu']\n",
         "compute_type = \"float16\" #@param {type:\"string\"} ['float16', 'int8_float16', 'int8']\n",
         "#@markdown ---\n",
@@ -148,7 +148,7 @@
         "Type = \"Youtube video or playlist\" #@param ['Youtube video or playlist', 'Google Drive']\n",
         "#@markdown ---\n",
         "#@markdown #### **Youtube video or playlist**\n",
-        "URL = \"https://www.bilibili.com/video/BV1ik4y1x7Qf/?vd_source=c136ccc9c1aa8d8b8723abf57c945bf5\" #@param {type:\"string\"}\n",
+        "URL = \"https://www.youtube.com/watch?v=7oNMH6HUhk8\" #@param {type:\"string\"}\n",
         "# store_audio = True #@param {type:\"boolean\"}\n",
         "#@markdown ---\n",
         "#@markdown #### **Google Drive video, audio (mp4, wav), or folder containing video and/or audio files**\n",
@@ -227,7 +227,7 @@
         "    milliseconds = round((s % 1) * 1000)\n",
         "    \n",
         "    # Return the formatted string\n",
-        "    return f\"{int(hours):02d}:{int(minutes):02d}:{int(seconds):02d} {int(milliseconds):03d}\"\n",
+        "    return f\"{int(hours):02d}:{int(minutes):02d}:{int(seconds):02d},{int(milliseconds):03d}\"\n",
         "\n",
         "#@markdown # **Run the model** 🚀\n",
         "\n",
@@ -237,9 +237,10 @@
         "\n",
         "#@markdown ### **Behavior control**\n",
         "#@markdown #### Language\n",
-        "language = \"en\" #@param [\"auto\", \"en\", \"zh\", \"jp\", \"fr\", \"de\"] {allow-input: true}\n",
+        "language = \"en\" #@param [\"auto\", \"en\", \"zh\", \"fr\", \"de\"] {allow-input: true}\n",
         "#@markdown #### initial prompt\n",
-        "initial_prompt = \"\\u8FD9\\u662F\\u4E2D\\u6587\\u548C\\u82F1\\u6587\\u6DF7\\u5408\\u7684\\u8BED\\u97F3\\uFF0C\\u9047\\u5230\\u4E2D\\u6587\\u5219\\u8BC6\\u522B\\u4E3A\\u4E2D\\u6587\\uFF0C\\u9047\\u5230\\u82F1\\u6587\\u5219\\u8BC6\\u522B\\u4E3A\\u82F1\\u6587\" #@param {type:\"string\"}\n",
+        "initial_prompt = \"Please do not translate, only transcription be allowed.  Here are some English words you may need: Cindy. And Chinese words: \\u7206\\u7834\" #@param {type:\"string\"}\n",
+        "#@markdown ---\n",
         "#@markdown #### Word-level timestamps\n",
         "word_level_timestamps = False #@param {type:\"boolean\"}\n",
         "#@markdown ---\n",
@@ -247,6 +248,8 @@
         "vad_filter = False #@param {type:\"boolean\"}\n",
         "vad_filter_min_silence_duration_ms = 2000 #@param {type:\"integer\"}\n",
         "#@markdown ---\n",
+        "#@markdown #### Output(Default is srt, txt if `text_only` be checked )\n",
+        "text_only = False #@param {type:\"boolean\"}\n",
         "\n",
         "\n",
         "segments, info = model.transcribe(str(video_path_local), beam_size=5,\n",
@@ -258,7 +261,8 @@
         "\n",
         "display(Markdown(f\"Detected language '{info.language}' with probability {info.language_probability}\"))\n",
         "\n",
-        "transcript_file_name = video_path_local.stem + \".srt\"\n",
+        "ext_name = '.txt' if text_only else \".srt\"\n",
+        "transcript_file_name = video_path_local.stem + ext_name\n",
         "sentence_idx = 1\n",
         "with open(transcript_file_name, 'w') as f:\n",
         "  for segment in segments:\n",
@@ -267,17 +271,24 @@
         "        ts_start = seconds_to_time_format(word.start)\n",
         "        ts_end = seconds_to_time_format(word.end)\n",
         "        print(f\"[{ts_start} --> {ts_end}] {word.word}\")\n",
-        "        f.write(f\"{sentence_idx}\\n\")\n",
-        "        f.write(f\"{ts_start} --> {ts_end}\\n\")\n",
-        "        f.write(f\"{word.word}\\n\\n\")\n",
+        "        if not text_only:\n",
+        "          f.write(f\"{sentence_idx}\\n\")\n",
+        "          f.write(f\"{ts_start} --> {ts_end}\\n\")\n",
+        "          f.write(f\"{word.word}\\n\\n\")\n",
+        "        else:\n",
+        "          f.write(f\"{word.word}\")\n",
+        "        f.write(\"\\n\")\n",
         "        sentence_idx = sentence_idx + 1\n",
         "    else:\n",
         "      ts_start = seconds_to_time_format(segment.start)\n",
         "      ts_end = seconds_to_time_format(segment.end)\n",
         "      print(f\"[{ts_start} --> {ts_end}] {segment.text}\")\n",
-        "      f.write(f\"{sentence_idx}\\n\")\n",
-        "      f.write(f\"{ts_start} --> {ts_end}\\n\")\n",
-        "      f.write(f\"{segment.text}\\n\\n\")\n",
+        "      if not text_only:\n",
+        "        f.write(f\"{sentence_idx}\\n\")\n",
+        "        f.write(f\"{ts_start} --> {ts_end}\\n\")\n",
+        "        f.write(f\"{segment.text.strip()}\\n\\n\")\n",
+        "      else:\n",
+        "        f.write(f\"{segment.text.strip()}\\n\")\n",
         "      sentence_idx = sentence_idx + 1\n",
         "\n",
         "shutil.copy(video_path_local.parent / transcript_file_name,\n",
@@ -286,7 +297,9 @@
         "display(Markdown(f\"**Transcript file created: {drive_whisper_path / transcript_file_name}**\"))\n"
       ],
       "metadata": {
-        "id": "Ad6n1m4deAHp"
+        "id": "Ad6n1m4deAHp",
+        "collapsed": true,
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
