Add all faster-whisper models and language ja

--- a/faster_whisper_youtube.ipynb
+++ b/faster_whisper_youtube.ipynb
@@ -119,11 +119,15 @@
         "\n",
         "#@markdown |  Size  | Parameters | English-only model | Multilingual model | Required VRAM | Relative speed |\n",
         "#@markdown |:------:|:----------:|:------------------:|:------------------:|:-------------:|:--------------:|\n",
-        "#@markdown | medium |   769 M    |    `medium.en`     |      `medium`      |     ~2 GB     |      ~2x       |\n",
-        "#@markdown | large-v2  |   1550 M   |        N/A         |      `large-v2`       |    ~4 GB     |       1x       |\n",
+        "#@markdown |  tiny  |    39 M    |     `tiny.en`      |       `tiny`       |     ~0.8 GB     |      ~32x      |\n",
+        "#@markdown |  base  |    74 M    |     `base.en`      |       `base`       |     ~1.0 GB     |      ~16x      |\n",
+        "#@markdown | small  |   244 M    |     `small.en`     |      `small`       |     ~1.4 GB     |      ~6x       |\n",
+        "#@markdown | medium |   769 M    |    `medium.en`     |      `medium`      |     ~2.7 GB     |      ~2x       |\n",
+        "#@markdown | large-v1  |   1550 M   |        N/A         |      `large-v1`       |    ~4.3 GB     |       1x       |\n",
+        "#@markdown | large-v2  |   1550 M   |        N/A         |      `large-v2`       |    ~4.3 GB     |       1x       |\n",
         "\n",
         "#@markdown ---\n",
-        "model_size = 'large-v2' #@param ['medium', 'large-v2']\n",
+        "model_size = 'large-v2' #@param ['tiny', 'tiny.en', 'base', 'base.en', 'small', 'small.en', 'medium', 'medium.en', 'large-v1', 'large-v2']\n",
         "device_type = \"cuda\" #@param {type:\"string\"} ['cuda', 'cpu']\n",
         "compute_type = \"float16\" #@param {type:\"string\"} ['float16', 'int8_float16', 'int8']\n",
         "#@markdown ---\n",
@@ -237,7 +241,7 @@
         "\n",
         "#@markdown ### **Behavior control**\n",
         "#@markdown #### Language\n",
-        "language = \"en\" #@param [\"auto\", \"en\", \"zh\", \"fr\", \"de\"] {allow-input: true}\n",
+        "language = \"en\" #@param [\"auto\", \"en\", \"zh\", \"ja\", \"fr\", \"de\"] {allow-input: true}\n",
         "#@markdown #### initial prompt\n",
         "initial_prompt = \"Please do not translate, only transcription be allowed.  Here are some English words you may need: Cindy. And Chinese words: \\u7206\\u7834\" #@param {type:\"string\"}\n",
         "#@markdown ---\n",
@@ -245,8 +249,8 @@
         "word_level_timestamps = False #@param {type:\"boolean\"}\n",
         "#@markdown ---\n",
         "#@markdown #### VAD filter\n",
-        "vad_filter = False #@param {type:\"boolean\"}\n",
-        "vad_filter_min_silence_duration_ms = 2000 #@param {type:\"integer\"}\n",
+        "vad_filter = True #@param {type:\"boolean\"}\n",
+        "vad_filter_min_silence_duration_ms = 50 #@param {type:\"integer\"}\n",
         "#@markdown ---\n",
         "#@markdown #### Output(Default is srt, txt if `text_only` be checked )\n",
         "text_only = False #@param {type:\"boolean\"}\n",
