--- a/faster_whisper_youtube.ipynb
+++ b/faster_whisper_youtube.ipynb
@@ -295,10 +295,13 @@
         "        f.write(f\"{segment.text.strip()}\\n\")\n",
         "      sentence_idx = sentence_idx + 1\n",
         "\n",
-        "shutil.copy(video_path_local.parent / transcript_file_name,\n",
+        "try:\n",
+        "  shutil.copy(video_path_local.parent / transcript_file_name,\n",
         "            drive_whisper_path / transcript_file_name\n",
-        ")\n",
-        "display(Markdown(f\"**Transcript file created: {drive_whisper_path / transcript_file_name}**\"))\n"
+        "  )\n",
+        "  display(Markdown(f\"**Transcript file created: {drive_whisper_path / transcript_file_name}**\"))\n",
+        "except:\n",
+        "  display(Markdown(f\"**Transcript file created: {video_path_local.parent / transcript_file_name}**\"))\n"
       ],
       "metadata": {
         "id": "Ad6n1m4deAHp",
