User friendly interface

--- a/faster_whisper_youtube.ipynb
+++ b/faster_whisper_youtube.ipynb
@@ -16,17 +16,12 @@
         "# **Youtube Videos Transcription with Faster Whisper + Jellyfin support**\n",
         "\n",
         "\n",
-        "[![notebook shield](https://img.shields.io/static/v1?label=&message=Notebook&color=blue&style=for-the-badge&logo=googlecolab&link=https://colab.research.google.com/github/ArthurFDLR/whisper-youtube/blob/main/whisper_youtube.ipynb)](https://colab.research.google.com/github/lewangdev/whisper-youtube/blob/main/faster_whisper_youtube.ipynb)\n",
-        "[![repository shield](https://img.shields.io/static/v1?label=&message=Repository&color=blue&style=for-the-badge&logo=github&link=https://github.com/lewangdev/faster_whisper_youtube)](https://github.com/lewangdev/faster_whisper_youtube)\n",
+        "[![repository shield](https://img.shields.io/static/v1?label=&message=Repository&color=blue&style=for-the-badge&logo=github&link=https://github.com/lewangdev/faster_whisper_youtube)](https://github.com/viniciusdutra314/faster-whisper-youtube-jellyfin)\n",
         "\n",
+        "This is a notebook where you can download videos/playlists from YouTube and transcribe them quickly using Faster Whisper. The videos and subtitles will be saved on your Google Drive in a Jellyfin-friendly format, ready to be used with the [Youtube-Metadata-Plugin](https://github.com/ankenyr/jellyfin-youtube-metadata-plugin).\n",
         "\n",
-        "[faster-whisper](https://github.com/guillaumekln/faster-whisper) is a reimplementation of OpenAI's Whisper model using CTranslate2, which is a fast inference engine for Transformer models.\n",
-        "\n",
-        "This implementation is up to 4 times faster than openai/whisper for the same accuracy while using less memory. The efficiency can be further improved with 8-bit quantization on both CPU and GPU.\n",
-        "\n",
-        "Whisper is a general-purpose speech recognition model. It is trained on a large dataset of diverse audio and is also a multi-task model that can perform multilingual speech recognition as well as speech translation and language identification.\n",
-        "\n",
-        "This Notebook will guide you through the transcription of a Youtube video using Faster Whisper. You'll be able to explore most inference parameters or use the Notebook as-is to store the transcript and video audio in your Google Drive."
+        "Credits:\n",
+        "This is a fork from [lewangdev](https://github.com/lewangdev/faster-whisper-youtube) which itself is a fork of [ArthurFDLR](https://github.com/ArthurFDLR/whisper-youtube), i just added a few lines to make it compatible with jellyfin, thank you guys to have made this so simple yet extremly useful google colab notebook!\n"
       ],
       "metadata": {
         "id": "96kvih9mXkNN"
@@ -37,7 +32,9 @@
       "source": [
         "#@markdown # **Jellyfin** <img src=\"https://jellyfin.org/images/logo.svg\"> { display-mode: \"form\" }\n",
         "\n",
-        "user=\"dutra\" #@param {type:\"string\"}\n",
+        "user=\"\" #@param {type:\"string\"}\n",
+        "#@markdown Video or playlist link:\n",
+        "URL=\"\" #@param {type:\"string\"}\n",
         "drive_path = \"Faster-Whisper-YT-Jellyfin\" #@param {type:\"string\"}\n",
         "save_dir=f\"/content/drive/MyDrive/Faster-Whisper-YT-Jellyfin/{user}/\"\n",
         "from pathlib import Path\n",
@@ -49,20 +46,17 @@
         "drive_whisper_path.mkdir(parents=True, exist_ok=True)"
       ],
       "metadata": {
-        "id": "jz8CbpHhyVkI"
+        "id": "jz8CbpHhyVkI",
+        "cellView": "form"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "IfG0E_WbRFI0"
-      },
-      "outputs": [],
       "source": [
-        "# @title **Install libraries** 🏗️ { display-mode: \"form\" }\n",
+        "#@markdown # **Download Video/Playlist** 📺 { display-mode: \"form\" }\n",
+        "\n",
         "\n",
         "def seconds_to_time_format(s):\n",
         "    hours = s // 3600\n",
@@ -86,26 +80,16 @@
         "import shutil\n",
         "import numpy as np\n",
         "from IPython.display import display, Markdown, YouTubeVideo\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@markdown # **Video selection** 📺 { display-mode: \"form\" }\n",
-        "#@markdown Enter the URL of the Youtube video/playlist you want to transcribe\n",
-        "#@markdown ---\n",
-        "#@markdown #### **Youtube video or playlist**\n",
-        "URL = \"https://www.youtube.com/playlist?list=PLYxwp9NMb2moMpugxVcS4OqBRhUM0MmnV\" #@param {type:\"string\"}\n",
-        "video_path = \"Colab Notebooks/transcription/my_video.mp4\"\n",
-        "#@markdown ---\n",
-        "#@markdown **Run this cell again if you change the video.**\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "import subprocess\n",
-        "process=subprocess.run([\"yt-dlp\",\"-o\",f\"{save_dir}[%(id)s].%(ext)s\",\n",
-        "URL,\"--write-info-json\"],stdout=subprocess.PIPE)\n",
-        "print(process.stderr)\n",
+        "command = [\"yt-dlp\", \"-o\", f\"{save_dir}[%(id)s].%(ext)s\", URL, \"--write-info-json\",\"--quiet\"]\n",
+        "process = subprocess.Popen(command, stdout=subprocess.PIPE, stderr=subprocess.STDOUT, text=True)\n",
+        "for line in process.stdout:\n",
+        "    print(line, end='')\n",
         "\n",
         "ydl_opts = {\n",
         "    'format': 'm4a/bestaudio/best',\n",
@@ -121,7 +105,8 @@
         "    download_info = [ydl.extract_info(URL, download=False)]"
       ],
       "metadata": {
-        "id": "xYLPZQX9S7tU"
+        "id": "xYLPZQX9S7tU",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -131,12 +116,12 @@
       "source": [
         "# @title **Run the model** 🚀 { display-mode: \"form\" }\n",
         "#@markdown Run this cell to execute the transcription of the video. This can take a while and very based on the length of the video and the number of parameters of the model selected above.\n",
+        "#@markdown **The default options should be fine for most users**\n",
+        "\n",
+        "language = \"auto\" #@param {type:\"string\"}\n",
         "model_size = 'large-v2' #@param {type:\"string\"} ['tiny', 'tiny.en', 'base', 'base.en', 'small', 'small.en', 'medium', 'medium.en', 'large-v1', 'large-v2']\n",
         "device_type = \"cuda\" #@param {type:\"string\"} [\"cuda\",\"cpu\"]\n",
         "compute_type = \"float16\"\n",
-        "language = \"auto\" #@param {type:\"string\"}\n",
-        "#@markdown ---\n",
-        "#@markdown #### Word-level timestamps\n",
         "word_level_timestamps = False #@param {type:\"boolean\"}\n",
         "#@markdown ---\n",
         "\n",
@@ -146,9 +131,16 @@
         "!pip install faster-whisper --quiet\n",
         "print(f\"Downloading {model_size} model\")\n",
         "from faster_whisper import WhisperModel\n",
-        "model = WhisperModel(model_size,device_type=device_type,compute_type=compute_type)\n",
+        "model = WhisperModel(model_size,device=device_type,compute_type=compute_type)\n",
         "\n",
-        "for video_info in list_video_info[0]['entries']:\n",
+        "if \"entries\" in download_info[0]:\n",
+        "  videos=download_info[0][\"entries\"]\n",
+        "else:\n",
+        "  videos=download_info[0]\n",
+        "\n",
+        "\n",
+        "for index,video_info in enumerate(videos):\n",
+        "  print(f\"{index} of {len(videos)}\")\n",
         "  video_path_local=Path(f\"{video_info['id']}.wav\")\n",
         "\n",
         "  segments, info = model.transcribe(f\"{str(video_path_local)}\", beam_size=5,\n",
@@ -159,7 +151,7 @@
         "\n",
         "  display(Markdown(f\"Detected language '{info.language}' with probability {info.language_probability}\"))\n",
         "\n",
-        "  ext_name = '.txt' if text_only else \".srt\"\n",
+        "  ext_name =\".srt\"\n",
         "  transcript_file_name = f\"{save_dir}[{video_path_local.stem}].srt\"\n",
         "  sentence_idx = 1\n",
         "  with open(transcript_file_name, 'w') as f:\n",
