single video bug fix

--- a/faster_whisper_youtube.ipynb
+++ b/faster_whisper_youtube.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/viniciusdutra314/faster-whisper-youtube-jellyfin/blob/main/faster_whisper_youtube.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -12,6 +12,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "96kvih9mXkNN"
+      },
       "source": [
         "# **Youtube Videos Transcription with Faster Whisper + Jellyfin support**\n",
         "\n",
@@ -22,13 +25,16 @@
         "\n",
         "Credits:\n",
         "This is a fork from [lewangdev](https://github.com/lewangdev/faster-whisper-youtube) which itself is a fork of [ArthurFDLR](https://github.com/ArthurFDLR/whisper-youtube), i just added a few lines to make it compatible with jellyfin, thank you guys to have made this so simple yet extremly useful google colab notebook!\n"
-      ],
-      "metadata": {
-        "id": "96kvih9mXkNN"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "jz8CbpHhyVkI"
+      },
+      "outputs": [],
       "source": [
         "#@markdown # **Jellyfin** <img src=\"https://jellyfin.org/images/logo.svg\"> { display-mode: \"form\" }\n",
         "\n",
@@ -44,16 +50,16 @@
         "drive_mount_path /= \"My Drive\"\n",
         "drive_whisper_path = drive_mount_path / Path(drive_path.lstrip(\"/\"))\n",
         "drive_whisper_path.mkdir(parents=True, exist_ok=True)"
-      ],
-      "metadata": {
-        "id": "jz8CbpHhyVkI",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "xYLPZQX9S7tU"
+      },
+      "outputs": [],
       "source": [
         "#@markdown # **Download Video/Playlist** 📺 { display-mode: \"form\" }\n",
         "\n",
@@ -103,16 +109,16 @@
         "with yt_dlp.YoutubeDL(ydl_opts) as ydl:\n",
         "    error_code = ydl.download([URL])\n",
         "    download_info = [ydl.extract_info(URL, download=False)]"
-      ],
-      "metadata": {
-        "id": "xYLPZQX9S7tU",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "Ad6n1m4deAHp"
+      },
+      "outputs": [],
       "source": [
         "# @title **Run the model** 🚀 { display-mode: \"form\" }\n",
         "#@markdown Run this cell to execute the transcription of the video. This can take a while and very based on the length of the video and the number of parameters of the model selected above.\n",
@@ -136,7 +142,7 @@
         "if \"entries\" in download_info[0]:\n",
         "  videos=download_info[0][\"entries\"]\n",
         "else:\n",
-        "  videos=download_info[0]\n",
+        "  videos=download_info\n",
         "\n",
         "\n",
         "for index,video_info in enumerate(videos):\n",
@@ -182,21 +188,15 @@
         "    display(Markdown(f\"**Transcript file created: {drive_whisper_path / transcript_file_name}**\"))\n",
         "  except:\n",
         "    display(Markdown(f\"**Transcript file created: {video_path_local.parent / transcript_file_name}**\"))\n"
-      ],
-      "metadata": {
-        "id": "Ad6n1m4deAHp",
-        "collapsed": true
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "provenance": [],
       "gpuType": "T4",
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
